# HRMS_utils

./: .gitignore  MANIFEST.in  ms_utils-0.1.0-pyhbf21a9e_0.conda  pixi copy.toml  pixi.toml  pyproject.toml  pyproject_2.toml  pyproject_3.toml  setup.py  setup_2.py  todo.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
mces/: mces.py  par.py
ms_utils/: formula.py  ms_buddy.py  msdial.py  pubchem.py  sirius.py  spectral_similarity.py
ms_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ms_utils/formats/: epa_xlsx.py  mgf.py  nist_mspec.py
ms_utils/formula_annotation/: basic_mass_decomposition.py  fiddle.py  isotopic_pattern.py  ms_buddy.py  polars.py  polars_interface.py  sirius.py  utils.py
ms_utils/formula_annotation/mass_decomposition_impl/: README.md  base_data.py  benchmark.py  java_inspired_decomposer.c  java_inspired_decomposer.pyx  mass_decomposer.pyx  mass_decomposer_common.cpp  mass_decomposer_common.hpp  mass_decomposer_core.cpp  mass_decomposer_core.hpp  mass_decomposer_cpp.cpp  mass_decomposer_cpp.pyx  mass_decomposer_cpp_api.md  mass_decomposer_money_changing.cpp  mass_decomposer_parallel.cpp  mass_decomposer_recursive.cpp  python_impl.py  setup.py  sirius_decomposer.c  sirius_decomposer.pyx  spectrum_decomposition.py  test_spectrum_decomposition.py
ms_utils/formula_annotation/my_impl/: README.md  benchmark.py  impl.py  parallel_benchmark.py  parallel_cython_decomposer.py  python_impl.py  sirius_decomposer.c  sirius_decomposer.pyx
ms_utils/formula_annotation/scratch/: mass_decomposer_cpp.pyx
ms_utils/interfaces/: msdial.py  pubchem.py
ms_utils/mces/: bounds.py  dataset_splitting.py  fast_bounds.py  graph_construction.py  lib.py  mces.py  par.py
ms_utils/mces/fast_mol_filter/: setup.py
ms_utils/ms_utils.egg-info/: PKG-INFO  top_level.txt
ms_utils/pyscreen/: NIST_search.py  epa.py  gui.py  main.py  pyscreen_config.py  spectral_search.py  spectral_similarity.py
ms_utils/rdkit/: fingerprint.py  mol.py
rdkit/: fingerprint.py
src/hrms_utils/: __init__.py
src/hrms_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hrms_utils/formats/: __init__.py  msdial.py
src/hrms_utils/formula_annotation/: __init__.py  element_table.py  isotopic_pattern.py  mass_decomposition.py  msdial_interface.py  utils.py
src/hrms_utils/interfaces/: msdial.py
src/hrms_utils/io_adapters/: msdial.py
src/hrms_utils/ms_utils.egg-info/: SOURCES.txt
src/ms_utils/: __init__.py
src/ms_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ms_utils/formats/: __init__.py
tests/: spectral_information.py
tests/formula_annotation/: chromatogram.py  chromatogram_formula_annotation.py  mass_decomposition.py  test_mass_decompostion.py  test_verbose_wrappers.py
tests/rdkit/: mol.py
tests/spectral_information/: spectral_information.py
(+29 files in other folders)
