[project]
name = "ms-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    
    "cython>=3.1.2",
    "ipykernel>=6.29.5",
    "ms-entropy==1.3.4",
    "polars>=1.31.0",
    "pyyaml>=6.0.2",
    "rdkit>=2024.9.6",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "joblib>=1.5.1,<2",
    "scipy>=1.16.0,<2",
]

[project.optional-dependencies]
pyscreen = [
    "customtkinter>=5.2.2",
]
mces = [
    "gurobipy>=12.0.1",
    "networkx>=3.4.2",
    "pulp>=3.2.1",
    "rustworkx>=0.16.0,<0.17",
    "msbuddy>=0.3.12",
]
formula_annotation = [
    "lightgbm>=4.6.0",
    "molmass[all]>=2025.4.14",
    "ms-entropy==1.3.4",
    "aiohttp>=3.11.18",
]
cuopt = [
    "cuopt-cu12==25.5.*",
]
all = [
    "ms-utils[pyscreen]",
    "ms-utils[mces]",
    "ms-utils[formula_annotation]",
    "ms-utils[cuopt]",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
polars = ">=1.31.0,<2"
# Only add conda-only packages here if needed

[tool.pixi.pypi-dependencies]
# Only add PyPI-only packages here if needed

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
mces = {features = ["mces"], solve-group = "default"}

[tool.pixi.feature.mces.tasks]
mces_bounds_full = "python -m ms_utils.mces.bounds --bounds-test"
mces_bounds = "python -m ms_utils.mces.bounds --bounds-test --no-mces"
mces_graph_construction = "python -m ms_utils.mces.lib --graph-benchmark"
mces_dataset_splitting = "python -m ms_utils.mces.dataset_splitting"
mces_many = "python -m ms_utils.mces.mces"
