[project]
name = "ms_utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars[all]>=1.32.0,<2",
    "rdkit>=2024.0.0",
    "numpy>=1.20.0",
    "numba>=0.55.0",
    "matplotlib>=3.5.0",
    "ms_entropy==1.3.4",
    "requests>=2.25.0",
    "aiohttp>=3.8.1",
    "httpx>=0.23.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "pyarrow>=12.0.0",
]
[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"


