[project]
name = "hrms_utils"
version = "0.2.2"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.32.0,<2",
    "rdkit>=2024.0.0",
    "numpy>=1.20.0",
    "numba",
    "ms_entropy==1.3.4",
    "requests",
    "aiohttp",
    "msbuddy>=0.1.0",
    "scipy",
    # for polars
    "pyarrow>=12.0.0",
    "pandas",
    "openpyxl",
    "python-calamine",
    "xlsx2csv",
    "xlsxwriter",
    "connectorx",
    "sqlalchemy",
]

[build-system]
requires = ["setuptools>=68", "wheel", "cython>=3.0.0", "numpy"]
build-backend = "setuptools.build_meta"


